# pymail

./: README.md  pyproject.toml
.github/actions/python-setup/: action.yml
.github/workflows/: pylint.yml
src/pymail/: base.py  exceptions.py  gmail.py
tests/: conftest.py  test_base.py  test_gmail.py
